--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
             <nav class="header__menu menu">
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a class="menu__link" href="">Shop</a>
+                        <a class="menu__link" href="#">Shop</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="">Home</a>
+                        <a class="menu__link" href="#">Home</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="">Story</a>
+                        <a class="menu__link" href="#">Story</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="">About</a>
+                        <a class="menu__link" href="#">About</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="">Blog</a>
+                        <a class="menu__link" href="#">Blog</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="">Testimonials</a>
+                        <a class="menu__link" href="#">Testimonials</a>
                     </li>
                 </ul>
             </nav>
             <div class="header__logo logo">
-                <a class="logo__link" href="">
+                <a class="logo__link" href="#">
                     <img class="logo__img" src="./../assets/images/header/header-logo-img.png"
                         alt="Organic fresh foods">
                 </a>
@@ -46,19 +46,19 @@
                 <div class="header__personal personal">
                     <ul class="personal__list">
                         <li class="personal__list-item">
-                            <a class="personal__link" href="">
+                            <a class="personal__link" href="#">
                                 <img class="personal__icon-search"
                                     src="./../assets/images/header/header-search-icon.png" alt="search">
                             </a>
                         </li>
                         <li class="personal__list-item">
-                            <a class="personal__link" href="">
+                            <a class="personal__link" href="#">
                                 <img class="personal__icon-user" src="./../assets/images/header/header-user-icon.png"
                                     alt="user">
                             </a>
                         </li>
                         <li class="personal__list-item">
-                            <a class="personal__link" href="">
+                            <a class="personal__link" href="#">
                                 <img class="personal__cart-icon" src="./../assets/images/header/header-cart-icon.png"
                                     alt="cart">
                             </a>
@@ -69,19 +69,19 @@
                 <div class="header__social social">
                     <ul class="social__list">
                         <li class="social__list-item">
-                            <a class="social__link" href="">
+                            <a class="social__link" href="#">
                                 <img class="social__icon-facebook"
                                     src="./../assets/images/header/header-facebook-icon.png" alt="facebook">
                             </a>
                         </li>
                         <li class="social__list-item">
-                            <a class="social__link" href="">
+                            <a class="social__link" href="#">
                                 <img class="social__icon-pinterest"
                                     src="./../assets/images/header/header-pinterest-icon.png" alt="pinterest">
                             </a>
                         </li>
                         <li class="social__list-item">
-                            <a class="social__link" href="">
+                            <a class="social__link" href="#">
                                 <img class="social__icon-instagram"
                                     src="./../assets/images/header/header-instagram-icon.png" alt="instagram">
                             </a>
@@ -280,7 +280,7 @@
                     ingredients are both juiced ahead of time, the mixed juice
                     doesn't even have to be blended like a smoothie, i.e. a
                     green juice or anything...
-                    <a class="article__link" href="">Read More</a>
+                    <a class="article__link" href="#">Read More</a>
                     <img class="article__arrow-yellow-small" src="./../assets/images/blog/blog-arrow-yellow-small.png"
                         alt=""></p>
             </article>
@@ -290,7 +290,7 @@
 
     <!--Instagram=============-->
     <section class="instagram">
-        <a class="instagram_link" href="">
+        <a class="instagram_link" href="#">
             <img class="instagram_logo" src="./../assets/images/instagram/instagram-logo.png" alt="">ashasuperfoods
         </a>
         <div class="instagram__picture-item">
@@ -306,7 +306,7 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="footer__logo logo">
-                <a class="logo__link" href="">
+                <a class="logo__link" href="#">
                     <img class="logo__img" src="./../assets/images/footer/footer-logo.png" alt="Organic fresh food">
                 </a>
             </div>
@@ -354,13 +354,13 @@
                 <div class="footer__subscribe-social">
                     <span class="footer__subscribe-text">Follow Us</span>
                     <div class="footer__social">
-                        <a class="footer__social-link" href="">
+                        <a class="footer__social-link" href="#">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-facebook.png" alt="">
                         </a>
-                        <a class="footer__social-link" href="">
+                        <a class="footer__social-link" href="#">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-pinterest.png" alt="">
                         </a>
-                        <a class="footer__social-link" href="">
+                        <a class="footer__social-link" href="#">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-instagram.png" alt="">
                         </a>
                     </div>
