--- a/index.html
+++ b/index.html
@@ -10,84 +10,95 @@
     <title>Document</title>
 </head>
 
-<body>
     <!--Header==============-->
     <header class="header">
         <div class="header__top">
-            <nav class="header__menu menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Shop</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Home</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Story</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">About</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Blog</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Testimonials</a>
-                    </li>
-                </ul>
-            </nav>
+            <!--кнопка бургер меню для медиазапроса==============-->
+            <div class="header__burger-btn">
+                <img class="header__burger-btn-icon" src="./../assets/images/burger-menu-white.png" alt="burger-menu">
+            </div>
+            <!--кнопка назад для медиазапроса==============-->
+            <div class="header__back-btn">
+                <img class="header__back-btn-icon" src="./../assets/images/back-btn.png" alt="burger-menu">
+            </div>
+            <!-- ========= -->
+            <div class="header__navigation">
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Shop</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Home</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Story</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">About</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Blog</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Testimonials</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <div class="header_right-bloc">
+                    <div class="header__personal personal">
+                        <ul class="personal__list">
+                            <li class="personal__list-item">
+                                <a class="personal__link" href="#">
+                                    <img class="personal__icon-search"
+                                        src="./../assets/images/header/header-search-icon.png" alt="search">
+                                </a>
+                            </li>
+                            <li class="personal__list-item">
+                                <a class="personal__link" href="#">
+                                    <img class="personal__icon-user"
+                                        src="./../assets/images/header/header-user-icon.png" alt="user">
+                                </a>
+                            </li>
+                            <li class="personal__list-item">
+                                <a class="personal__link" href="#">
+                                    <img class="personal__cart-icon"
+                                        src="./../assets/images/header/header-cart-icon.png" alt="cart">
+                                </a>
+                                <span class="personal__cart-count">3</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header__social social">
+                        <ul class="social__list">
+                            <li class="social__list-item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon-facebook"
+                                        src="./../assets/images/header/header-facebook-icon.png" alt="facebook">
+                                </a>
+                            </li>
+                            <li class="social__list-item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon-pinterest"
+                                        src="./../assets/images/header/header-pinterest-icon.png" alt="pinterest">
+                                </a>
+                            </li>
+                            <li class="social__list-item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon-instagram"
+                                        src="./../assets/images/header/header-instagram-icon.png" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="header__logo logo">
                 <a class="logo__link" href="#">
                     <img class="logo__img" src="./../assets/images/header/header-logo-img.png"
                         alt="Organic fresh foods">
                 </a>
-            </div>
-            <div class="header_right-bloc">
-                <div class="header__personal personal">
-                    <ul class="personal__list">
-                        <li class="personal__list-item">
-                            <a class="personal__link" href="#">
-                                <img class="personal__icon-search"
-                                    src="./../assets/images/header/header-search-icon.png" alt="search">
-                            </a>
-                        </li>
-                        <li class="personal__list-item">
-                            <a class="personal__link" href="#">
-                                <img class="personal__icon-user" src="./../assets/images/header/header-user-icon.png"
-                                    alt="user">
-                            </a>
-                        </li>
-                        <li class="personal__list-item">
-                            <a class="personal__link" href="#">
-                                <img class="personal__cart-icon" src="./../assets/images/header/header-cart-icon.png"
-                                    alt="cart">
-                            </a>
-                            <span class="personal__cart-count">3</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="header__social social">
-                    <ul class="social__list">
-                        <li class="social__list-item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon-facebook"
-                                    src="./../assets/images/header/header-facebook-icon.png" alt="facebook">
-                            </a>
-                        </li>
-                        <li class="social__list-item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon-pinterest"
-                                    src="./../assets/images/header/header-pinterest-icon.png" alt="pinterest">
-                            </a>
-                        </li>
-                        <li class="social__list-item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon-instagram"
-                                    src="./../assets/images/header/header-instagram-icon.png" alt="instagram">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
         <div class="header__content">
@@ -355,13 +366,16 @@
                     <span class="footer__subscribe-text">Follow Us</span>
                     <div class="footer__social">
                         <a class="footer__social-link" href="#">
-                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-facebook.png" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-facebook.png"
+                                alt="">
                         </a>
                         <a class="footer__social-link" href="#">
-                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-pinterest.png" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-pinterest.png"
+                                alt="">
                         </a>
                         <a class="footer__social-link" href="#">
-                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-instagram.png" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-instagram.png"
+                                alt="">
                         </a>
                     </div>
                 </div>
@@ -372,8 +386,7 @@
             <span class="footer__bottom-copy">&copy; 2020. All Rights Reserved.</span>
             <div class="footer__wrapper">
                 <span class="footer__wrapper-text">Go top</span>
-                <button class="footer__btn-top">
-                </button>
+                <button class="footer__btn-top"></button>
             </div>
         </div>
     </footer>
